--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,7 @@
       "css": ["style.css"]
     }
   ],
-  "web_accessible_resources": ["iframe.html"],
+  "web_accessible_resources": ["iframe.html", "firebase_test.css", "firebase_test.js"],
+  "content_security_policy": "script-src 'self' https://*.googleapis.com https://cdn.firebase.com; object-src 'self'",
   "manifest_version": 2
 }
