Test auth changes

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Page Ranker",
+  "name": "PageRate",
   "description": "Community rank the quality of the current page",
   "version": "0.1",
   "permissions": [
